<resources>
    <string name="app_name">IMH</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_name">IMH用药管家</string>
    <string name="bottom_bar_news">健康资讯</string>
    <string name="bottom_bar_control">药箱管控</string>
    <string name="bottom_bar_chatting">医生咨询</string>
    <string name="bottom_bar_personal">个人中心</string>
    <string name="control_box">设备管理</string>
    <string name="control_tablet">药品管理</string>
    <string name="control_clock">服药提醒</string>
    <string name="control_bell">消息通知</string>

    <string name="school_friend_search_hint">搜索</string>


    <string name="action_settings">Settings</string>
    <string-array name="lv_content">
        <item>昨日，北京发布的2014年度《健康白皮书》披露，去年北京人均期望寿命为81.81岁。其中显示，西城女性期望寿命最长，达到86.82岁。</item>
        <item>6月15日通报，当天韩国新增的5例中东呼吸综合征(MERS)确诊患者中，又有3例属于“第四代感染者”。这显示出病毒传播能力超过预期，韩国防疫形势更加严峻。</item>
        <item>我国是消化道恶性肿瘤的高发国家，发病率占全球42%，仅胃癌每年就新增40万例，居全球首位。在我国恶性肿瘤发病率、死亡率排名前六位中，胃肠道恶性肿瘤占据“半壁江山”，其中胃癌、食管癌、结肠癌分列第2、5、6位。</item>
        <item>癫痫(epilepsy)即俗称的“羊角风”或“羊癫风”，是大脑神经元突发性异常放电，导致短暂的大脑功能障碍的一种慢性疾玻据中国最新流行病学资料显示，现今我国癫痫患病率为7‰，活动性癫痫患病率为4.6‰，即约有600万癫痫发作没有控制的癫痫患者。</item>
        <item>第二届中国心血管创新论坛(简称CIC-2015)于2015年6月19～21日在南京成功召开。霍勇教授和张澍教授共同主持开幕式，陈琪教授和曹国芳主任致开幕词。</item>
        <item>记者从近日举行的全国现代畜牧业建设工作会议获悉，东阿阿胶与日本卡里苔丝株式会社和内蒙古博恩药业公司，将分别从驴胎盘和孕驴血等方面签约合作，进而在活体循环开发项目中取得突破进展。</item>
        <item>2013年中国抗生素总使用量约为16.2万吨，其中48%为人用抗生素，其余为兽用抗生素。而且，中国东部的抗生素排放量密度是西部流域的6倍以上。抗生素滥用的顽疾再次引发关注。</item>
        <item>记者昨日从市卫计委了解到，自《北京市控制吸烟条例》本月实施以来，两周时间里控烟投诉举报1743件。在接到的控烟投诉举报中，排在第一的为写字楼办公楼，其次是餐厅和商场超市。</item>
    </string-array>
    <string-array name="lv_title">
        <item>北京已进入老龄化社会 平均每天113人患癌</item>
        <item>科学防范MERS 注意卫生避免接触呼吸道感染者</item>
        <item>我国胃癌发病率居全球首位 喜食烫食腌食是主因</item>
        <item>国际癫痫关爱日 天坛专家在行动</item>
        <item>第二届中国心血管创新论坛(CIC-2015)成功召开</item>
        <item>毛驴药用价值高 东阿阿胶活体循环开发取得突破</item>
        <item>中国一年吃十几万吨抗生素 滥用致耐药菌肆虐</item>
        <item>办公写字楼成吸烟投诉重灾区 执法将集中处罚</item>
        <item>北京市民若患重大疾病 可申领临时救助金</item>
        <item>整合看病各种卡统一为“北京通” 将年内发放</item>
    </string-array>
    <string-array name="Month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
</resources>
