
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.zdh.alphathink.imh.fragment.NoWifiConnected">
  <LinearLayout
      android:id="@+id/control_box"
      android:clickable="true"
      android:background="@drawable/control_item_selector"
      android:layout_width="match_parent"
      android:layout_height="65dp">
    <ImageView
        android:paddingLeft="19dp"
        android:layout_gravity="center"
        android:contentDescription="@string/control_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/control_box"/>
    <TextView
        android:paddingLeft="19dp"
        android:textColor="@color/index_text_normal"
        android:textSize="21sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/control_box"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
      <ImageView
          android:layout_alignParentRight="true"
          android:paddingRight="21dp"
          android:layout_centerInParent="true"
          android:src="@drawable/just_go"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />
    </RelativeLayout>
  </LinearLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1px"
      android:background="@color/background"
      />
  <LinearLayout
      android:id="@+id/control_tablet"
      android:clickable="true"
      android:background="@drawable/control_item_selector"
      android:layout_width="match_parent"
      android:layout_height="65dp">
    <ImageView
        android:paddingLeft="19dp"
        android:layout_gravity="center"
        android:contentDescription="@string/control_tablet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/control_tablet"/>
    <TextView
        android:paddingLeft="19dp"
        android:textColor="@color/index_text_normal"
        android:textSize="21sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/control_tablet"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
      <ImageView
          android:layout_alignParentRight="true"
          android:paddingRight="21dp"
          android:layout_centerInParent="true"
          android:src="@drawable/just_go"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />
    </RelativeLayout>
  </LinearLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1px"
      android:background="@color/background"
      />
  <LinearLayout
      android:id="@+id/control_clock"
      android:clickable="true"
      android:background="@drawable/control_item_selector"
      android:layout_width="match_parent"
      android:layout_height="65dp">
    <ImageView
        android:paddingLeft="19dp"
        android:layout_gravity="center"
        android:contentDescription="@string/control_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/control_clock"/>
    <TextView
        android:paddingLeft="19dp"
        android:textColor="@color/index_text_normal"
        android:textSize="21sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/control_clock"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
      <ImageView
          android:layout_alignParentRight="true"
          android:paddingRight="21dp"
          android:layout_centerInParent="true"
          android:src="@drawable/just_go"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />
    </RelativeLayout>
  </LinearLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1px"
      android:background="@color/background"
      />
  <LinearLayout
      android:id="@+id/control_bell"
      android:clickable="true"
      android:background="@drawable/control_item_selector"
      android:layout_width="match_parent"
      android:layout_height="65dp">
    <ImageView
        android:paddingLeft="19dp"
        android:layout_gravity="center"
        android:contentDescription="@string/control_bell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/control_bell"/>
    <TextView
        android:paddingLeft="19dp"
        android:textColor="@color/index_text_normal"
        android:textSize="21sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/control_bell"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
      <ImageView
          android:layout_alignParentRight="true"
          android:paddingRight="21dp"
          android:layout_centerInParent="true"
          android:src="@drawable/just_go"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />
    </RelativeLayout>
  </LinearLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1px"
      android:background="@color/background"
      />

</LinearLayout>
